<resources>
    <string name="app_name">Health-Food-Me</string>
    <string name="login_logo">헬푸미</string>
    <string name="login_description">샐러드부터 일반식까지\n다이어터를 위한 식당 추천 지도앱</string>

    <!-- Healfoome -->
    <string name="healfoome_mail">hfmlove5252@gmail.com</string>

    <!-- Global -->
    <string name="cancel">취소</string>
    <string name="health_food_me">헬푸미</string>
    <string name="save">저장</string>
    <string name="complete">완료</string>

    <!-- Main Chip Group -->
    <string name="main_chip_group_salad">샐러드</string>
    <string name="main_chip_group_poke">포케</string>
    <string name="main_chip_group_sandwich">샌드위치</string>
    <string name="main_chip_group_quito">키토김밥</string>
    <string name="main_chip_group_lunch_box">도시락</string>
    <string name="main_chip_group_shabu">샤브샤브</string>
    <string name="main_chip_group_bosam">보쌈</string>
    <string name="main_chip_group_steak">스테이크</string>
    <string name="main_chip_group_ricebowl">덮밥</string>
    <string name="main_chip_group_meat">고깃집</string>

    <!-- Profile -->
    <string name="profile_title">프로필 편집</string>
    <string name="profile_description">변경할 닉네임을 설정해 주세요</string>
    <string name="profile_nickname">닉네임을 설정해 주세요</string>
    <string name="profile_nickname_condition">* 특수문자, 이모티콘은 사용 불가합니다\n* 띄어쓰기 포함 최대 12글자</string>
    <string name="profile_modify">수정 완료</string>

    <!-- My Review -->
    <string name="my_review_title">내가 쓴 리뷰</string>
    <string name="my_review_description">헬푸미와 외식 걱정을 날려보아요!</string>
    <string name="my_review_store">식당 보러 가기</string>
    <string name="my_review_description_second">다이어터도 즐길 수 있는</string>
    <string name="my_review_delete">편집</string>
    <string name="my_review_edit">삭제</string>

    <!-- Withdrawal -->
    <string name="withdrawal_title">회원탈퇴</string>

    <!-- Setting -->
    <string name="setting_title">설정</string>
    <string name="setting_customer_support">고객지원</string>
    <string name="setting_inquiry">문의하기</string>
    <string name="setting_withdrawal">회원탈퇴</string>
    <string name="setting_declaration">신고하기</string>
    <string name="setting_privacy_policy">개인정보처리방침</string>
    <string name="setting_terms_policies">약관 및 정책</string>
    <string name="setting_open_source_info">오픈 소스 정보</string>
    <string name="setting_naver_map_notice">네이버 지도 법적 공지</string>
    <string name="setting_naver_map_open_source">네이버 지도 오픈소스 라이선스</string>

    <!-- My Scrap -->
    <string name="my_scrap_title">스크랩한 식당</string>
    <string name="my_scrap_explain_first">헬푸미와 외식 걱정을 날려보아요!</string>
    <string name="my_scrap_explain_second">다이어터도 즐길 수 있는 식당</string>

    <string-array name="main_chip_group">
        <item>@string/main_chip_group_salad</item>
        <item>@string/main_chip_group_poke</item>
        <item>@string/main_chip_group_sandwich</item>
        <item>@string/main_chip_group_quito</item>
        <item>@string/main_chip_group_lunch_box</item>
        <item>@string/main_chip_group_shabu</item>
        <item>@string/main_chip_group_bosam</item>
        <item>@string/main_chip_group_steak</item>
        <item>@string/main_chip_group_meat</item>
        <item>@string/main_chip_group_ricebowl</item>
    </string-array>

    <!-- Main Drawer -->
    <string name="main_drawer_scrap">스크랩한 식당</string>
    <string name="main_drawer_review">내가 쓴 리뷰</string>
    <string name="main_drawer_report">가게 제보하기</string>
    <string name="main_drawer_modify_report">수정사항 제보하기</string>
    <string name="main_drawer_setting">설정</string>
    <string name="main_drawer_logout">로그아웃</string>
    <string name="main_drawer_welcome">안녕하세요!</string>
    <string name="main_drawer_welcome_second">님</string>
    <string name="main_drawer_welcome_third">오늘도 헬푸미하세요</string>
    <string name="main_drawer_login">로그인이 필요해요</string>

    <!-- Login -->
    <string name="login_kakao">카카오 계정으로 로그인</string>
    <string name="login_naver">네이버 계정으로 로그인</string>
    <string name="login_guest">둘러보기</string>
    <string name="auto_login_fail">자동로그인이 만료되었습니다.</string>

    <!-- Logout Dialog -->
    <string name="logout_dialog_caution">정말 로그아웃 하시겠어요?</string>
    <string name="logout_dialog_caution_description">로그아웃 시 헬푸미의 업데이트 내용을\n보실 수 없습니다</string>
    <string name="logout_dialog_yes">네</string>
    <string name="logout_dialog_no">아니요</string>

    <!-- Confirm Dialog -->
    <string name="confirm_dialog_confirm">확인</string>
    <string name="confirm_dialog_network_caution">네트워킹 연결이 불안정합니다</string>
    <string name="confirm_dialog_login_caution">로그인에 실패했습니다\n다시 시도해 주세요!</string>
    <string name="confirm_dialog_location_caution">위치 서비스를 사용할 수 없습니다</string>
    <string name="confirm_dialog_location_caution_description">내 주변 헬푸미 추천 식당을 보기 위해\n\'위치 접근 허용\'을 해주세요</string>

    <!-- Withdraw -->
    <string name="withdraw_description">탈퇴하면 내 앱 모든 데이터가 사라집니다\n서비스를 탈퇴하려면 닉네임을 입력해주세요</string>
    <string name="withdraw_nickname">푸밍이</string>
    <string name="withdraw_confirm">확인</string>

    <!-- Withdraw Dialog -->
    <string name="withdraw_dialog_caution">정말로 탈퇴하실건가요?</string>
    <string name="withdraw_dialog_caution_description">탈퇴 시 헬푸미의 새로운 정보를\n얻을 수 없습니다</string>
    <string name="withdraw_dialog_no">아니요</string>
    <string name="withdraw_dialog_yes"><u>네 탈퇴할게요</u></string>

    <!-- MyReview Edit Dialog -->
    <string name="my_edit_dialog_caution">리뷰편집을 취소하시겠습니까?</string>
    <string name="my_edit_dialog_caution_description">편집취소 시,\n수정된 글은 저장되지 않습니다.</string>
    <string name="my_edit_dialog_yse">네</string>
    <string name="my_edit_dialog_no">아니오</string>

    <!-- MyReview Write Dialog -->
    <string name="my_review_write_dialog_caution">리뷰작성을 취소하시겠습니까?</string>
    <string name="my_review_write_dialog_caution_description">작성취소 시,\n작성된 글은 저장되지 않습니다.</string>

    <!-- MyReview Dialog -->
    <string name="my_review_dialog_caution">작성한 리뷰를\n삭제하실 건가요?</string>
    <string name="my_review_dialog_no">아니요</string>
    <string name="my_review_dialog_yes">네</string>

    <!-- Guest Login Dialog -->
    <string name="guest_login_dialog_description">선택하신 기능은\n간편 로그인 후 이용 가능합니다!</string>

    <!-- Format -->
    <string name="format_hashtag">#%s</string>
    <string name="format_hashtag_with_blank"># %s</string>
    <string name="format_image_count">%d/3</string>
    <string name="main_search">식당, 음식 검색</string>

    <!-- Restaurant Detail -->
    <string name="restaurant_detail_score_format">(️%s)</string>
    <string name="restaurant_detail_price_format">%d원</string>
    <string name="restaurant_detail_navi_meter_format">%dm</string>
    <string name="restaurant_detail_gram_format">%dg</string>
    <string name="restaurant_detail_gram_per_person">(%dg당)</string>
    <string name="restaurant_detail_gram_per_person_for_empty">(-g당)</string>
    <string name="restaurant_detail_gram_per_person_format">1인분 (%dg)</string>
    <string name="restaurant_detail_review_length_format">(%d/500자)</string>
    <string name="restaurant_detail_tab_item_menu">메뉴</string>
    <string name="restaurant_detail_tab_item_how_to_eat_out">외식대처법</string>
    <string name="restaurant_detail_tab_item_review">리뷰</string>
    <string name="restaurant_detail_calorie_unit">Kcal</string>
    <string name="restaurant_detail_carb">탄수화물</string>
    <string name="restaurant_detail_protein">단백질</string>
    <string name="restaurant_detail_fat">지방</string>
    <string name="restaurant_detail_nutrient">영양정보</string>
    <string name="restaurant_detail_blog_review">블로그 리뷰</string>
    <string name="restaurant_detail_eating_out_recommendation_title">추천하는 이유!</string>
    <string name="restaurant_detail_eating_out_how_to_eat_title">이렇게 드셔보세요!</string>
    <string name="restaurant_detail_eating_out_empty_view_description">해당되는 카테고리에\n관련된 외식대처법은 준비중입니다</string>
    <string name="restaurant_detail_eating_out_empty_view_guide">조금만 기다려 주세요!</string>
    <string name="restaurant_detail_review_empty_view_guide">아직 작성된 리뷰가 없습니다\n첫 리뷰를 작성해 주세요</string>
    <string name="restuarant_detail_memu_view_all">메뉴 전체보기</string>

    <!--Search-->
    <string name="search_restaurant_food">식당, 음식 검색</string>
    <string name="search_recent_word">최근 검색어</string>
    <string name="search_result_empty">해당되는 검색 결과가 없습니다</string>
    <string name="search_look_map">지도 보기</string>
    <string name="search_look_list">목록 보기</string>

    <string-array name="restaurant_detail_tab_titles">
        <item>@string/restaurant_detail_tab_item_menu</item>
        <item>@string/restaurant_detail_tab_item_how_to_eat_out</item>
        <item>@string/restaurant_detail_tab_item_review</item>
    </string-array>

    <!-- Map Selection -->
    <string name="dialog_map_selection_naver">네이버지도</string>
    <string name="dialog_map_selection_kakao">카카오맵</string>

    <!-- Review Writing-->
    <string name="review_writing_title">리뷰작성</string>
    <string name="review_writing_taste_title">맛은 어때요?</string>
    <string name="review_writing_taste_description">필수 한 개 선택해 주세요!</string>
    <string name="review_writing_good_point_title">어떤 점이 좋았나요?</string>
    <string name="review_writing_good_point_description">식당을 방문하신 후 좋았던 부분에 체크해주세요! (중복가능)</string>
    <string name="review_writing_review_title">후기를 남겨주세요</string>
    <string name="review_writing_review_description">식당 이용 후기, 메뉴추천, 꿀팁 등 자유롭게 작성해주세요!</string>

    <string name="review_writing_taste_hashtag_taste_good">맛 최고</string>
    <string name="review_writing_taste_hashtag_taste_not_bad">맛 그럭저럭</string>
    <string name="review_writing_taste_hashtag_taste_bad">맛 별로예요</string>
    <string name="review_writing_taste_hashtag_taste_no_burden">약속 시 부담 없는</string>
    <string name="review_writing_taste_hashtag_taste_easy_to_control">양 조절 쉬운</string>
    <string name="review_writing_taste_hashtag_full">든든한</string>

    <string name="review_writing_photo_title">사진을 올려주세요</string>
    <string name="review_writing_photo_selection">(선택)</string>
    <string name="review_writing_photo_guide">해당 가게와 무관한 사진을 첨부하면 노출 제한 처리될 수 있습니다.\n사진첨부 시 개인정보가 노출되지 않도록 유의해주세요.</string>
    <string name="review_writing_hint">리뷰를 작성해주세요 (최대 500자)</string>
    <string name="review_writing_write_btn_text">작성 완료</string>
    <string name="review_write_complete_text">리뷰 쓰기 완료</string>
    <string name="review_write_text">리뷰 쓰기</string>

    <string name="review_writing_image_upload_toast_text">사진첨부는 최대 3장만 가능합니다</string>
    <string name="review_writing_complete_condition_toast_text">별점과 맛 평가는 필수입니다.</string>
    <string name="image_viewer_page_format">%d/3</string>

    <!-- Gallery -->
    <string name="tv_photo_shoot">사진 찍기</string>
    <string name="tv_gallery">사진 보관함</string>

    <!-- empty -->
    <string name="empty_go_scrap">스크랩하러 가기</string>
    <string name="empty_go_restaurant">식당 보러 가기</string>

    <!-- tools -->
    <string name="dear_fine">디어파인</string>

    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>

    <!-- Mail -->
    <string name="mail_content_restuarant_report">제보할 가게를 작성해 주세요.</string>
    <string name="mail_content_inquiry">문의할 내용을 작성해 주세요.</string>
    <string name="mail_content_declaration">부적절한 리뷰를 알려주세요.\n식당이름, 닉네임을 작성해 주시면 접수 후 처리할 예정입니다.</string>
    <string name="mail_content_modify_report">제보할 수정 사항을 작성해 주세요.</string>
</resources>