<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="org.helfoome.presentation.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.drawer.SettingActivity">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_spacing_20"
            android:layout_marginTop="@dimen/size_spacing_13"
            android:src="@drawable/ic_before"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_setting_title"
            style="@style/TextView.Setting.TextAppearance_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_spacing_18"
            android:text="@string/setting_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line_first"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/size_spacing_13"
            android:background="@color/gray_200"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <TextView
            android:id="@+id/tv_customer_support"
            style="@style/TextView.Setting.TextAppearance_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_spacing_20"
            android:layout_marginTop="@dimen/size_spacing_24"
            android:text="@string/setting_customer_support"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_first" />

        <TextView
            android:id="@+id/tv_inquiry"
            style="@style/TextView.Setting.TextAppearance_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_spacing_20"
            android:layout_marginTop="@dimen/size_spacing_24"
            android:text="@string/setting_inquiry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_customer_support" />

        <TextView
            android:id="@+id/tv_withdrawal"
            style="@style/TextView.Setting.TextAppearance_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_spacing_20"
            android:layout_marginTop="@dimen/size_spacing_36"
            android:text="@string/setting_withdrawal"
            android:visibility="@{viewModel.getIsGuestLogin() ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_inquiry" />

        <TextView
            android:id="@+id/tv_declaration"
            style="@style/TextView.Setting.TextAppearance_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_spacing_20"
            android:layout_marginTop="@{viewModel.getIsGuestLogin() ? 36 : 88}"
            android:text="@string/setting_declaration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_inquiry" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.getIsGuestLogin() ? View.GONE : View.VISIBLE}"
            app:layout_constraintTop_toBottomOf="@id/tv_declaration">

            <TextView
                android:id="@+id/tv_terms_plicies"
                style="@style/TextView.Setting.TextAppearance_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_spacing_20"
                android:layout_marginTop="54dp"
                android:text="@string/setting_terms_policies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_open_soruce_info"
                style="@style/TextView.Setting.TextAppearance_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_spacing_20"
                android:layout_marginTop="@dimen/size_spacing_24"
                android:text="@string/setting_open_source_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_terms_plicies" />

            <TextView
                android:id="@+id/tv_naver_map_notice"
                style="@style/TextView.Setting.TextAppearance_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_spacing_20"
                android:layout_marginTop="@dimen/size_spacing_36"
                android:text="@string/setting_naver_map_notice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_open_soruce_info" />

            <TextView
                android:id="@+id/tv_naver_map_open_source"
                style="@style/TextView.Setting.TextAppearance_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_spacing_20"
                android:layout_marginTop="@dimen/size_spacing_36"
                android:text="@string/setting_naver_map_open_source"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_naver_map_notice" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>