<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_explain_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_scrap_explain_first"
            android:textColor="@color/gray_800"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_explain_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/my_scrap_explain_second"
            android:textColor="@color/gray_600"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_explain_first" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_scrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="95dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_red_radius_36"
            android:text="@string/empty_go_scrap"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_explain_second" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>