<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_white_radius_15">

    <TextView
        android:id="@+id/tv_caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_spacing_32"
        android:fontFamily="@font/notosanskr_m"
        android:text="@string/my_edit_dialog_caution"
        android:textColor="@color/gray_800"
        android:textSize="@dimen/size_spacing_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_caution_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_spacing_8"
        android:gravity="center"
        android:text="@string/my_edit_dialog_caution_description"
        android:textColor="@color/gray_800"
        android:textSize="@dimen/size_spacing_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_caution" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yes"
        style="@style/Button.Basic.Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_spacing_20"
        android:layout_marginTop="@dimen/size_spacing_24"
        android:background="@drawable/rectangle_red_radius_8"
        android:paddingVertical="@dimen/size_spacing_11"
        android:stateListAnimator="@null"
        android:text="@string/my_edit_dialog_yse"
        android:textColor="@color/white"
        android:textSize="@dimen/size_spacing_15"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_caution_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_no"
        style="@style/Button.Basic.Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_spacing_20"
        android:layout_marginTop="@dimen/size_spacing_8"
        android:layout_marginBottom="@dimen/size_spacing_24"
        android:background="@drawable/rectangle_white_radius_8"
        android:paddingVertical="@dimen/size_spacing_11"
        android:stateListAnimator="@null"
        android:text="@string/my_edit_dialog_no"
        android:textColor="@color/gray_600"
        android:textSize="@dimen/size_spacing_15"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_yes" />

</androidx.constraintlayout.widget.ConstraintLayout>
