<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="288dp"
    android:layout_height="223dp"
    android:background="@drawable/rectangle_white_radius_15">

    <TextView
        android:id="@+id/tv_caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/my_review_dialog_caution"
        android:textColor="@color/gray_800"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yes"
        style="@style/Button.Basic.Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_red_radius_8"
        android:paddingVertical="11dp"
        android:text="@string/my_review_dialog_yes"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_caution" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_no"
        style="@style/Button.Basic.Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rectangle_white_radius_8"
        android:paddingVertical="11dp"
        android:text="@string/my_review_dialog_no"
        android:textColor="@color/gray_600"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_yes" />

</androidx.constraintlayout.widget.ConstraintLayout>
